// exploration.proto - JIT learning and exploration service
//
// Copyright (C) Manoj Jhawar, Intelligent Devices LLC
// Created: 2025-12-28
//
// Replaces: JITLearning AIDL interfaces

syntax = "proto3";

package com.augmentalis.universalrpc.exploration;

option java_package = "com.augmentalis.universalrpc.exploration";
option java_multiple_files = true;

import "avid.proto";

// Exploration state
enum ExplorationState {
    EXPLORATION_IDLE = 0;
    EXPLORATION_CAPTURING = 1;
    EXPLORATION_ANALYZING = 2;
    EXPLORATION_LEARNING = 3;
    EXPLORATION_COMPLETED = 4;
    EXPLORATION_FAILED = 5;
}

// Exploration progress
message ExplorationProgress {
    ExplorationState state = 1;
    float progress = 2;           // 0-1 completion percentage
    int32 elements_found = 3;
    int32 elements_learned = 4;
    string current_activity = 5;
    string message = 6;
}

// Exploration configuration
message ExplorationConfig {
    string package_name = 1;
    int32 max_depth = 2;
    int32 timeout_ms = 3;
    bool include_system_ui = 4;
    bool learn_gestures = 5;
    repeated string excluded_classes = 6;
}

// Start exploration request
message StartExplorationRequest {
    string request_id = 1;
    ExplorationConfig config = 2;
}

// Exploration result
message ExplorationResult {
    string request_id = 1;
    bool success = 2;
    string package_name = 3;
    int32 screens_explored = 4;
    int32 elements_learned = 5;
    int32 commands_generated = 6;
    repeated LearnedScreen screens = 7;
}

// Learned screen data
message LearnedScreen {
    string activity_name = 1;
    string screen_hash = 2;
    repeated LearnedElement elements = 3;
    int64 learned_at = 4;
}

// Learned element with generated commands
message LearnedElement {
    string avid = 1;
    string element_type = 2;
    string text = 3;
    string content_desc = 4;
    com.augmentalis.universalrpc.avid.Bounds bounds = 5;
    repeated string suggested_commands = 6;
    float confidence = 7;
}

// JIT learning request
message JITLearnRequest {
    string request_id = 1;
    string package_name = 2;
    string activity_name = 3;
    string user_intent = 4;       // What user is trying to do
}

// JIT learning result
message JITLearnResult {
    string request_id = 1;
    bool success = 2;
    repeated SuggestedAction actions = 3;
    string explanation = 4;
}

message SuggestedAction {
    string command = 1;
    string avid = 2;
    string action_type = 3;
    float confidence = 4;
    string description = 5;
}

// Element capture request
message CaptureElementRequest {
    string request_id = 1;
    com.augmentalis.universalrpc.avid.Bounds bounds = 2;
    string hint = 3;
}

// Service definition
service ExplorationService {
    // Start full exploration
    rpc StartExploration(StartExplorationRequest) returns (ExplorationResult);

    // Stop current exploration
    rpc StopExploration(StopExplorationRequest) returns (ExplorationResult);

    // Get exploration progress
    rpc GetProgress(GetProgressRequest) returns (ExplorationProgress);

    // JIT learning
    rpc LearnJIT(JITLearnRequest) returns (JITLearnResult);

    // Capture specific element
    rpc CaptureElement(CaptureElementRequest) returns (LearnedElement);

    // Stream exploration progress
    rpc StreamProgress(StartExplorationRequest) returns (stream ExplorationProgress);

    // Get learned data for app
    rpc GetLearnedData(GetLearnedDataRequest) returns (ExplorationResult);
}

message StopExplorationRequest {
    string request_id = 1;
}

message GetProgressRequest {
    string request_id = 1;
}

message GetLearnedDataRequest {
    string request_id = 1;
    string package_name = 2;
}
